# PSF-framework

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README_v0.2.md  START_HERE.md  pyproject.toml  requirements.txt  run_all.py
Boundaries/: Boundary_1_Temporal.md  Boundary_4_Aggregation.md
Experiments/: aggregation_collapse_test.py  robustness_evaluation.py  scalar_collapse_revalidation.py
Experiments/cmapss/: 01_iccs_cmapss_analysis.py  02_iccs_representation_analysis.py  03_iccs_noise_analysis.py  04_baseline_comparison.py  generate_figures.py  selected_channels.yaml
Experiments/v0.4/: expectations.yaml  signal_generators.py
Framework/: PSF_v1.0_preprint.md
Paper/: Outline.md
Paper/sections/: conclusion.tex  experiments.tex  framework.tex  (+2 more)
Results/: Memory_Profile_Result.md  robustness_protocol.md  robustness_summary.md
Validation/: Observer_Benchmark.md
archive/: README.md
docs/: ICCS_v1.1_Architecture.md  RELEASE_v1.0.md  Real_World_Validation.md  Robustness_Hypotheses.md  iccs_v1_specification.md  neurips_submission_draft.md  validation_plan.md
examples/: ar1_profile.py  compare_systems.py  lorenz_profile.py
experiments/: iccs_debug_harness.py  iccs_evaluation_harness.py  iccs_extended_benchmark.py  iccs_results_visualizer.py
iccs_v4/: regime_causal_dynamics.py  regime_geometry.py  regime_self_optimizing_compiler.py  regime_transition_graph.py
paper/: manuscript.md  manuscript.tex  references.bib
psf.egg-info/: SOURCES.txt
terms/: ICCS_Project_Dictionary.md  ICCS_Simple_Explanation.md
tests/: test_imports.py
(+189 files in other folders)
