[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psf"
version = "0.1.0"
description = "Boundary Validation Protocol (BVP) and ICCS v1.1 Framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]
