[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iccs"
version = "1.0.0"
description = "Information-Theoretic Complex Systems Framework (ICCS v1.0)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "networkx"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["iccs_v4*"]
